<resources>
    <string name="app_name">Medical</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="button">Login</string>
    <string name="textView_register">Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="not_registered">Not registered?</string>
</resources>
